# cardano-mpfs-cage

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  cabal.project  cardano-mpfs-cage.cabal  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
.specify/memory/: constitution.md
app/test-vectors/: Main.hs
architecture/properties/: index.html
architecture/types/: index.html
docs/: index.md
docs/architecture/: properties.md  types.md
lean/: lakefile.lean
lean/MpfsCage/: Spec.lean
lib/Cardano/MPFS/Cage/: Types.hs
nix/: project.nix
search/: search_index.json
specs/001-mixed-modify-reject/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-mixed-modify-reject/checklists/: requirements.md
test/Cardano/MPFS/Cage/: TypesSpec.hs
